@@ -2,7 +2,7 @@ package App::Doh;
 
 use 5.010001;
 use namespace::autoclean;
-use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev: 6 $ =~ /\d+/gmx );
+use version; our $VERSION = qv( sprintf '0.3.%d', q$Rev: 7 $ =~ /\d+/gmx );
 
 use Moo;
 use Class::Usul::Constants  qw( NUL TRUE );
@@ -39,7 +39,7 @@ App::Doh - An easy way to document a project using Markdown
 
 =head1 Version
 
-This documents version v0.3.$Rev: 6 $ of L<App::Doh>
+This documents version v0.3.$Rev: 7 $ of L<App::Doh>
 
 =head1 Description
 
